fixing section alignments

--- a/showcase/showcase.css
+++ b/showcase/showcase.css
@@ -74,7 +74,9 @@ img {
     flex-direction: column;
     align-items: center;
     width: 30%;
-    height: 100%;
+    margin: 20px;
+    border-radius: 10px;
+/*     height: 100%; */
     position: fixed;
 }
 
@@ -139,7 +141,7 @@ img {
 .project-card {
     background-color: white;
     padding: 20px;
-    margin: 10px 50px;
+    margin: 20px 50px 10px;
     border-radius: 10px;
     display: flex;
     flex-direction: row;
